Fix flash of misalignment

--- a/src/freecell/style.css
+++ b/src/freecell/style.css
@@ -65,6 +65,10 @@ body.landing {
     align-items: center;
 }
 
+
+
+.hidden { display: none }
+
 header { display: none; }
 footer {
     position: fixed;
